Adjusted positioning of infection card contents within an event details tooltips. Prevented disease cubes displayed in InfectCity event details from wrapping to a new line. Fixed an issue where event details tooltips which did not contain any infection cards would have their width adjusted by the resizeInfectionCards function.

--- a/style.css
+++ b/style.css
@@ -495,6 +495,8 @@ span.r {color: #ef282a; background: none}
 #cubeSupplies .info:hover
 { text-shadow: 0px 0px 3px #fff }
 #eventDetails .playerCard { margin: 2px 0 }
+
+#eventDetails .cubes { white-space: nowrap }
 #eventDetails .diseaseCube
 {
 	display: inline-block;
